# Robotic-Self-Confidence-Estimation-Robot-knows-when-NOT-to-trust-itself-

./: README.md  package.xml  setup.cfg:  setup.py
config/: confidence_params.yaml
launch/: confidence_system.launch.py
resource/: robot_confidence
robot_confidence/: __init__.py  confidence_node.py  navigation_behavior_node.py
